bridge/base/admin-panel-deployment.yaml
#! admin-panel-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: admin-panel
    namespace: yessbackend-master
    labels:
        com.docker.compose.project: yessbackend-master
        com.docker.compose.service: admin-panel
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: yessbackend-master
            com.docker.compose.service: admin-panel
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: yessbackend-master
                com.docker.compose.service: admin-panel
                com.docker.compose.network.yess-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: yess-admin-panel
                  image: yessbackend-master-admin-panel
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['wget --quiet --tries=1 --spider http://localhost/health']
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: admin-panel-80
                      containerPort: 80
