bridge/base/csharp-backend-deployment.yaml
#! csharp-backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: csharp-backend
    namespace: yessbackend-master
    labels:
        com.docker.compose.project: yessbackend-master
        com.docker.compose.service: csharp-backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: yessbackend-master
            com.docker.compose.service: csharp-backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: yessbackend-master
                com.docker.compose.service: csharp-backend
                com.docker.compose.network.yess-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: yess-backend
                  image: yessbackend-master-csharp-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: csharp-bac-8000
                      containerPort: 8000
                    - name: csharp-bac-8443
                      containerPort: 8443
                  volumeMounts:
                    - name: app-uploads
                      mountPath: /app/uploads
            volumes:
                - name: app-uploads
                  persistentVolumeClaim:
                    claimName: csharp-backend-yess-uploads
