bridge/base/admin-panel-service.yaml
# check if there is at least one published port

#! admin-panel-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: admin-panel-published
    namespace: yessbackend-master
    labels:
        com.docker.compose.project: yessbackend-master
        com.docker.compose.service: admin-panel
spec:
    selector:
        com.docker.compose.project: yessbackend-master
        com.docker.compose.service: admin-panel
    ports:
        - name: admin-pane-8083
          port: 8083
          protocol: TCP
          targetPort: admin-panel-80

# check if there is at least one published port
