bridge/base/partner-panel-expose.yaml
#! partner-panel-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: partner-panel
    namespace: yessbackend-master
    labels:
        com.docker.compose.project: yessbackend-master
        com.docker.compose.service: partner-panel
spec:
    selector:
        com.docker.compose.project: yessbackend-master
        com.docker.compose.service: partner-panel
    ports:
        - name: partner-pane-80
          port: 80
          targetPort: partner-pane-80
