bridge/base/yess-network-network-policy.yaml
#! yess-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: yess-network-network-policy
    namespace: yessbackend-master
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.yess-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.yess-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.yess-network: "true"
